--- a/meeting_agendas/1_intro.Rmd
+++ b/meeting_agendas/1_intro.Rmd
@@ -12,72 +12,50 @@ library(scales)
 library(tidyverse)
 ```
 
-## I. Start-of-class work (5 min)
+## I. Start-of-class work
 
-### Think-pair-share
+Let's discuss:
 
-This only works if you get to multilevel modeling
+## What are the major goals of statistical inference?
 
-Think: Please explore/think about Figure 1. E.g., What US counties/regions experience the highest rates of kidney cancers in the late 1980s?  
-Pair: Discuss with your neighbor(s)  
-Share: When prompted, share your observations/comments/questions with the class (see below).  
+## Frequentist approach to statistics
 
-## II. Where are all the cancers? (10 min)
-
-Let's discuss the maps of showing estimating US Kidney cancer rates.
-
-## III. Frequentist vs. Bayesian (10 min)
-
-(modified from Bolstad & Curran Ch.1, p.6)
-
-### Frequentist (classical) approach to statistics
-
-- parameters, the numerical characterics of a population (think of them as **targets of learning**), are fixed but unknown constants.
+- parameters, the numerical characteristics of a population (think of them as **targets of learning**), are fixed but unknown constants.
 - probabilities as *always* long-run relative frequency.
 - Statistical procedures are judged how often things occur in an infinite number of repetitions of the experiment
  
-### Bayesian approach to statistics
+## Bayesian approach to statistics
 
 - We model parameters as random variables since we are uncertain about their true value.
 - The basic rules of probability are used **directly** to make statistical inferences about the parameters (it's how we **update** our beliefs about uncertain quantities in light of data)
 - Probability statements must be interpreted as a "degree of belief" (not hypothetical long-run relative frequency)
 - Each person can have his/her own prior beliefs before (and must be able to formalize that belief as a probability distribution)
 
-## II. Our community (20 min)
+## II. Getting to know our community
 
-### Students: 
-
-Undergraduate and graduate students in math, engineering, computer science, or other applied field
- 
-#### Activity
-
-Modify for Zoom
-
-Please introduce yourself to your neighbor(s):
+Please introduce yourself (briefly) to the class by telling us:
 
 1) Name (what you liked to be called)
 2) Major
 3) Professional goals
-4) (Appropriate) personal interests
-
-Let's go around the room and everyone please introduce your partner(s).
+4) A hobby or interest you have.
 
 ### Instructor: A. Grant Schissler, PhD
 
-- background: 6 years of high schools teaching, 6 years at higher Ed teaching
+- teaching experience: 6 years of high schools teaching, >6 years at higher Ed teaching
 - education: BS in Applied Math, MS in Applied Stat, PhD in Statistics
-- research interests: Developing stats methods for personalized medicine, statistical computing, Bayesian modeling, clustering, high dimensional data, large scale hypothesis testing, simulation, multivariate analysis, limited data 
-- other interests: dogs, hiking, tennis, running, ukulele, games
+- research interests: Developing stats methods for personalized medicine, statistical computing, Bayesian modeling, clustering, high-dimensional data, large scale hypothesis testing, simulation, multivariate analysis, limited data analyses
+- other interests: being a dog dad, reading, hiking, tennis, running, video games
 
 ### Reciprocal interview
 
 #### Questions for you:
-1) What is Bayesian statistics (your own definition, don't look anything up at this time)?
-2) What are your goals for the course?
-3) What is your best outcome imagined for the course?
-4) What is your worst outcome imagined for the course?
-5) What is the most likely outcome imagined for the course?
-6) What can I do to help you learn best?
+
+1) What are your goals for the course?  
+2) What is your best outcome imagined for the course?  
+3) What is your worst outcome imagined for the course?  
+4) What is the most likely outcome imagined for the course (prediction)?  
+5) What can I do to help you learn best?
 
 #### Questions for me?
 
@@ -87,123 +65,56 @@ Please, please, ask anything on your mind (about the class) --- anxieties, hopes
 
 Assume good will among everyone here. **Ask Questions** and **Work Together** --- these are the most important reasons for class time.
 
-## III. Course expectations and learning outcomes (25 min)
+## III. Course expectations and learning outcomes
 
 ### Course goals and caveats
 
 #### Audience
 
 - This course is designed for a broad audience: Grad, UG, various majors.
-- This means that rarely is everyone satisfied completely.
 - My goal introduce Bayesian statistics through building an active-learning community (us).
-- That means meetings will be active and designed to engage most of the audience.  
-- There will be both online (individual) and paper assignments.
-- I'll use a variety of instructional in-class activites: lecture, solo/group activities, and student-led presentations.
+- Classes are designed to engage and require you to think, let passively sit and absorb.
 
 #### Scope
 
-- The focus is on core Bayesian statistical ideas and techniques, both computational and analytic.
-- This is not a "rigorous" introduction as those ideas are not required to do applied Bayesian statistics.
-- However, there is symbolic manipulation ("math"), of course: you will need to use basic probability, algebra, and calculus.
+- The course follows Bolstad & Curran closely.  
+- You are expected to know basic probability, algebra, calculus, and linear algebra.
+- The first chapters are treated quickly, with hopes of addressing the later, more advanced topics.
+- You will have to perform some symbolic manipulation (basic proof writing).
 - Programming is required for applied Bayesian Statistics. This should not be your first programming experience.
-- We will use `R` primarily.
-- Feel free to bring your laptop to compute in class.
+- We will use `R` and `rmarkdown` with $\LaTeX$ embedded to complete problem sets.
+- Extensive derivations may be submitted by scanned handwriting but this is discouraged in general.
 
 #### Not happy? Talk with me
 
-- All that being said, if I'm ever not meeting your learning goals or other issue, just talk with me.
+- Ff I'm ever not meeting your learning goals or other issue, just talk with me.
 - It saddens me to see evaluations at the end that indicate problems I could have helped had I known.
 - It doesn't help you or me to keep issues to yourself.
 
 ### Estimated time commitment
 
-In-class activities require 2.5 hours/week.
+- Class participation: 2.5 hours/week.  
+- Readings: 2 hours/week.  
+- Problem Sets: 2.5 hours/week.  
+- Midterms: 3 hours total (1 hour x 3 exams)  
+- Final Exam: 6 hours total (6 hours x 1 exam)  
 
-```{r}
-inclass_dat <- read_excel("~/OneDrive - University of Nevada, Reno/Teaching/Bayes_course/git_public/course_materials/Spring2019_inclass_schedule.xlsx")
-## str(inclass_dat)
+$(5, 10)$ hours a week is a reasonable interval for weekly hours.
 
-sum_dat <- inclass_dat %>%
-  group_by(Activity) %>%
-  summarise(Minutes = sum(Minutes), n = n())
-
-sum_dat$Percent <- sum_dat$Minutes/sum(sum_dat$Minutes) * 100
-
-sum_dat
-
-bp <- ggplot(sum_dat, aes(x="", y=Percent, fill=Activity)) +
-    geom_bar(width = 1, stat = "identity")
-## bp
-
-pie <- bp + coord_polar("y", start=0)
-print(pie)
-```
-
-Out-of-class activities depend on many individual factors. I'd regard these expected durations to be on the low end (it will likely take a bit longer).
-
-```{r}
-outclass_dat <- read_excel("~/OneDrive - University of Nevada, Reno/Teaching/Bayes_course/git_public/course_materials/Spring2019_outside_class_schedule_SP20.xlsx")
-## str(outclass_dat)
-
-## drop 'None' category
-outclass_dat <- outclass_dat[outclass_dat$Activity != "None",]
-outclass_dat$Activity <- factor(outclass_dat$Activity)
-
-sum_dat <- outclass_dat %>%
-  group_by(Activity) %>%
-  summarise(Minutes = sum(Minutes), n = n())
-
-sum_dat$Percent <- sum_dat$Minutes/sum(sum_dat$Minutes) * 100
-
-sum_dat
-
-## sum(sum_dat$Percent)
-
-bp <- ggplot(sum_dat, aes(x="", y=Percent, fill=Activity)) +
-    geom_bar(width = 1, stat = "identity")
-
-pie <- bp + coord_polar("y", start=0)
-pie
-```
-
-```{r}
-## weekly expectation
-sum_dat <- outclass_dat %>% group_by(Week) %>% summarise(Minutes = sum(Minutes), n = n())
-cat(mean(sum_dat$Minutes)/60, "hours")
-```
+Let me know if you are spending much more time than this.
 
 ### Syllabus
 
-[syllabus](https://github.com/grizant/Intro_Bayes_Course/blob/develop/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.pdf)
+Let me open up `RStudio` and render the syllabus.
 
-Think-pair-share
-
-1. Please read the syllabus and list/mark 5 most important things.
-2. Pair up and share your thought with your neighbor(s).
-3. Share with the whole group.
+1. Alone. Please read the syllabus and list/mark 5 most important things.
+2. Together. Share with the whole group.
 
 ### Detailed learning outcomes
 
 [learning outcomes](https://github.com/grizant/Intro_Bayes_Course/blob/develop/course_materials/Intro-to-Bayesian-Statistics_learning_outcomes.pdf)
 
 You can always ask, "How does this activity relate to the learning outcomes?". 
-
-### Point-based grading system
-
-Points are aligned with my valuation of the learning outcomes according to this matrix.
-
-[Intro_Bayes_Course_course_assessment_plan.xlsx](https://github.com/grizant/Intro_Bayes_Course/blob/develop/course_materials/Intro_Bayes_Course_course_assessment_plan_SP20.xlsx)
-
-
-```{r}
-points_dat <- read_excel("~/OneDrive - University of Nevada, Reno/Teaching/Bayes_course/git_public/course_materials/Spring2019_points_time_SP20.xlsx")
-## str(outclass_dat)
-
-## scatterplot
-sp <- ggplot(points_dat, aes(x=Week, y=cumsum(Points), color=Activity)) + geom_point() + labs(y="Cumulative point total")
-sp
-
-```
 
 ### Course resources
 
@@ -214,7 +125,7 @@ sp
 - Gradebook management
 - Secure file submissions
 - Secure file sharing
-- Another way to message the instructor
+- Preferred way to message the instructor
 
 #### Mastering `R` and `RStudio`
 
@@ -223,8 +134,6 @@ https://education.rstudio.com/learn/beginner/
 https://education.rstudio.com/learn/intermediate/
 
 https://education.rstudio.com/learn/expert/
-
-Show rmd source
 
 #### Term project
 
@@ -236,10 +145,10 @@ Just clone and enjoy. Note that files will be updated from the previous semester
 
 [https://github.com/grizant/Intro_Bayes_Course/tree/develop](https://github.com/grizant/Intro_Bayes_Course/tree/develop)
 
-## V. Closing (5 min). 3-2-1
+## V. Closing . 3-2-1
 
 - 3 next actions you need to take
 - 2 things you learned
-- 1 friend you made (you can count me if you like ;) )
+- 1 thing you are looking forward to in the class.
 
-Share with the class, not the friend part if it's embarrassing to say...
+Share with the class.
